--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -11,4 +12,10 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.mockito:mockito-inline:3.7.7'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
 }
+
+
+mainClassName = 'Main'
