--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile 'org.mockito:mockito-inline:3.7.7'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.mockito:mockito-inline:3.7.7'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
 }
